2005-02-17  Tim Perdue <tim@gforge.org>

	* [#1043] Tracker / SOAP  Patch to get list of artifacts working.
	by  Alain Peyrat (aljeux)
	* [#1060] Mass update fix for task (4.0.2)
	by  Alain Peyrat (aljeux)

2005-02-16  Tim Perdue <tim@gforge.org>

	* for menus in docs, forums, news, scm, frs, tracker, task manager, surveys,
	hide the admin link if they are not an admin
	* when creating a new project, the trackers are by default set to allow_anon=0
	* www/pm/add_task.php move hours up on the page as it is required

2005-02-15  Tim Perdue <tim@gforge.org>

	* /docman/new.php - specifying the min sizes for title and description
	* /tracker/add.php - moving the "please login" message to the top of the screen
	* www/include/project_home.php - show both admins and developers	

2005-02-15  Mathieu Peltier <mathieu.peltier@gmail.com>

	* applied [#775] Patch for not able to change file to another
	release/package by Jader Marasca (fixed bug [#663]). Added tests
	on the new release id in order to be sure that the new release
	belongs to a package of the same group.

2005-02-12  Tim Perdue <tim@gforge.org>

	* Adding new function validate_emails() which accepts multiple 
	emails which are comma-separated. This was used so we could accept
	multiple addresses for the notify features when new docs, tasks, 
	artifacts, and forum messages are submitted
	* Monitor an entire tracker in addition to just an individual item
	* Finished tracker_gateway.php so you can send emails to the tracker
	similar to the forum_gateway.php
	* Full text indexing is now an option for searches. Rather than using 
	the exact-match regex functions, we now use tsearch2 functions

2005-01-27  Tim Perdue <tim@gforge.org>

	* FRS file reorganization - files are stored in /group_name/package_name/release_name/

2005-01-20  Greg Hudson <ghudson@mit.edu>

	* Updated priority help text (maximum priority is now 5, not 9)

2005-01-20  Christian Bayle <bayle@debian.org>
	